[package]
edition = "2018"
name = "sky-color-wallpaper"
version = "0.3.1"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
description = "Set random wallpapers according to sky color"
readme = "README.md"
keywords = ["cli", "wallpaper"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qryxip/sky-color-wallpaper"

[dependencies]
anyhow = "1.0.20"
atty = "0.2.13"
chrono = "0.4.9"
derive_more = "0.99.1"
dirs = "2.0.2"
geodate = "0.3.0"
glob = "0.3.0"
itertools = "0.8.1"
once_cell = "1.2.0"
rand = "0.7.2"
regex = "1.3.1"
reqwest = { version = "0.9.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_yaml = "0.8.11"
structopt = "0.3.4"
strum = { version = "0.16.0", features = ["derive"] }
tracing = "0.1.10"
tracing-subscriber = "0.1.6"
url_1 = { package = "url", version = "1.7.2" }
wallpaper = "2.0.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
winapi-util = "0.1.2"
