[package]
edition = "2018"
name = "sky-color-wallpaper"
version = "0.3.1"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
description = "Set random wallpapers according to sky color"
readme = "README.md"
keywords = ["cli", "wallpaper"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qryxip/sky-color-wallpaper"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
clap = { version = "3.0.0", features = ["derive"] }
derive_more = "0.99.17"
dirs-next = "2.0.0"
geodate = "0.4.0"
glob = "0.3.0"
itertools = "0.10.3"
once_cell = "1.9.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.8", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
structopt = "0.3.25"
strum = { version = "0.23.0", features = ["derive"] }
time = { version = "0.3.5", features = ["local-offset"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
url = "2.2.2"
wallpaper = "3.2.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
winapi-util = "0.1.5"

[features]
